--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "imask": "^7.5.0",
     "redom": "^4.0.0"
   },
   "devDependencies": {
